<package format="3">
  <name>tsp</name>
  <version>0.1.0</version>
  <description>

    description

  </description>
  <maintainer email="hong091788@naver.com">hyeon</maintainer>
  <author>hyeon</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>vision_msgs</depend>
  <depend>std_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>